Resolve extra margin and padding from navbar expanding every page

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,8 +6,6 @@
 
 .Main {
   padding-top: 81px;
-  padding-left: 0px !important;
-  padding-right: 0px !important;
   background-color: #f0eeee;
 }
 
