--- a/src/styles/Container.module.css
+++ b/src/styles/Container.module.css
@@ -119,8 +119,8 @@
   position: absolute;
   font-size: 1.2rem;
   padding: 9px;
-  padding-left: 15px;
-  padding-right: 8px;
+  /* padding-left: 15px; */
+  /* padding-right: 8px; */
   padding-top: 11px;
   color: black;
 }
