--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -4,6 +4,7 @@
   border-bottom: 4px solid orange;
   padding: 0px;
   margin: 0px;
+  overflow-x: hidden;
 }
 
 .NavLink {
