--- a/src/styles/PostsPage.module.css
+++ b/src/styles/PostsPage.module.css
@@ -31,8 +31,6 @@
 }
 
 .ScrollableContainer {
-  overflow-y: auto; 
-  background-color:rgba(206, 206, 206, 0.696);
   min-height: 100vh;
 }
 
@@ -45,8 +43,8 @@
 }
 
 .SortIcon{
-  margin-top: 7px;
-  margin-left: 5px;
+  margin:0px;
+  padding: 0px;
   color: black;
 }
 
@@ -68,9 +66,7 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 0;
   list-style: none;
-  max-height: 400px; 
   overflow-y: auto; 
-  min-width: 400px;
 }
 
 .SortingDropdown:hover {
@@ -96,3 +92,21 @@
   font-weight: bold; 
 }
 
+/* 
+ */
+
+ .MobileNavIcon {
+  position: fixed;
+  top: 80px; 
+  right: 30px; 
+  z-index: 999;
+  padding: 0;
+  background: transparent;
+  border: none;
+  color: black ;
+  text-shadow: 0px 0px 1px orange;
+}
+
+.MobileNavIcon {
+  color: black;
+}
